<resources>
    <string name="app_name">VS_pascalo_ChatApp</string>
    <string name="settings">Settings</string>
    <string name="notification_sound_check_box">Sound</string>
    <string name="notification_vibration_check_box">Vibration</string>
    <string name="inAppNot_vibration_check_box">InApp Vibration</string>
    <string name="show_key">Show Key</string>
    <string name="add_chat">Add Chat</string>
    <string name="go_offline">Go Offline</string>
    <string name="open_network_configuraion">Open Network Configuration</string>
    <string name="local_service_connected">Connected to ChatApp Service</string>
    <string name="local_service_disconnected">Disconnected from ChatApp Service</string>
    <string name="forget_user">Forget User</string>
    <string name="show_partner_key">Show Partner Key</string>
    <string name="add_partner_info">Add Partner Info</string>
    <string name="generate_new_key_btn">Generate new key</string>
    <string name="edit_text_username">Username</string>
    <string name="scan_chat_partner_info">Scan Information</string>
    <string name="public_key_hint">Public key...</string>
    <string name="add_user">Add User</string>
    <string name="chat_partner_name_hint">Chat partner name...</string>
    <string name="scan_or_type_key">You can either scan your chat partners name and key or type them in manually.</string>
    <string name="generate_key">Generate a Key</string>
    <string name="generate_new_login">Generate a new Login</string>
    <string name="chat_partner_id">Chat partner id...</string>
    <string name="showKey_explanation">Since you do not have the ZXing Barcode Scanner, no QR code can be produced, please copy these values manually.</string>
    <string name="send_message_button_text">Send</string>
    <string name="choose_your_username">Choose your username...</string>
    <string name="identity_set_up_title">Identity set-up</string>
    <string name="error_invalid_UUID">Invalid UUID. Please enter a valid UUID.</string>
    <string name="error_key_is_null">Key is an empty string. Please enter a valid key.</string>
    <string name="error_chatPartnerName_is_empty">The name of the chat partner is left empty. Please insert a name.</string>
    <string name="error_empty_username">The Username is empty. Please enter a name.</string>
    <string name="successful_copy_to_clipboard">Content has been copied to the clipboard.</string>
    <string name="edit_user">Edit User</string>
</resources>
