<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scan_key"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a4.pascalo.vs_pascalo_chatapp.UI.ScanKeyActivity">

    <Button
        android:text="@string/scan_chat_partner_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_scan_or_type_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_scan_chat_partner_info" />

    <TextView
        android:text="@string/scan_or_type_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textview_scan_or_type_key"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chat_partner_name_hint"
        android:text=""
        android:ems="10"
        android:id="@+id/editText_partner_name"
        android:layout_below="@+id/button_scan_chat_partner_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textNoSuggestions" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:ems="10"
        android:id="@+id/editText_public_key"
        android:hint="@string/public_key_hint"
        android:inputType="textMultiLine|textVisiblePassword"
        android:layout_below="@+id/editText_partner_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:ems="10"
        android:hint="@string/chat_partner_id"
        android:inputType="textVisiblePassword"
        android:layout_below="@+id/editText_public_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText_partner_id" />

    <Button
        android:text="@string/add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_chat_partner"
        android:layout_below="@+id/editText_partner_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
